fixup! support spoofing results of permission requests